# internal/app/rest_server.go
@@ -2695,6 +2695,10 @@ func (h *RestServer) historyCallRecordToRest(c history.CallRecord) rest.CallReco
 	if len(c.ResponseHeaders) > 0 {
 		r.ResponseHeaders = maps.Clone(c.ResponseHeaders)
 	}
+	if len(c.ResponseDetails) > 0 {
+		responseDetails := append([]map[string]any(nil), c.ResponseDetails...)
+		r.ResponseDetails = &responseDetails
+	}
 	if len(c.ResponseTimestamps) > 0 {
 		responseTimestamps := append([]time.Time(nil), c.ResponseTimestamps...)
 		r.ResponseTimestamps = &responseTimestamps
